objects/ccrz__E_ContactAddr__c.object
<CustomObject>
    <description>Used to store address information.  Associated with Carts, Orders, Invoices, Subscriptions, Payments, etc.</description>
    <fields>
        <fullName>BillTo_ShipTo_ID__c</fullName>
        <label>BillTo_ShipTo_ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_oo_BillToShipToID__c</fullName>
        <label>BillTo_ShipTo_ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__AddrReadOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates whether this address is read only.</description>
        <label>AddrReadOnly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__AddressFirstline__c</fullName>
        <description>First line of the street address.</description>
        <label>Address Firstline</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__AddressSecondline__c</fullName>
        <description>Second line of the street address.</description>
        <label>Address Secondline</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__AddressThirdline__c</fullName>
        <description>Third line of the street address.</description>
        <label>Address Thirdline</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__City__c</fullName>
        <description>City for the address.</description>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__CompanyName__c</fullName>
        <description>Company name associated with this address.</description>
        <label>Company Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__ContactAddrId__c</fullName>
        <description>External unique external id used for data loading.  Not used by CloudCraze.</description>
        <externalId>true</externalId>
        <label>Contact Addr Id</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__CountryISOCode__c</fullName>
        <description>ISO code associated with the country.</description>
        <label>Country ISO Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Country__c</fullName>
        <description>Descriptive country name.  Typically country ISO code is used.</description>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__DaytimePhone__c</fullName>
        <description>Main phone number for the address.</description>
        <label>Daytime Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ccrz__Email__c</fullName>
        <description>Email address associated with the address.</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ccrz__FirstName__c</fullName>
        <description>Person first name associated with the address.</description>
        <label>First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__HomePhone__c</fullName>
        <description>Secondary phone associated with the address.</description>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ccrz__LastName__c</fullName>
        <description>Person last name associated with the address.</description>
        <label>Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__MailStop__c</fullName>
        <description>MailStop</description>
        <label>Mail Stop</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__MiddleName__c</fullName>
        <description>Person middle name associated with the address.</description>
        <label>Middle Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Partner_Id__c</fullName>
        <description>External Id used to tie the address to another system.  This id is carried through from the address book to the eventual order.</description>
        <label>Partner_Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__PostalCode__c</fullName>
        <description>Postal Code associated with the address.</description>
        <label>Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__ShippingComments__c</fullName>
        <description>If the user enters any shipping comments during checkout those comments will be in this field on the shipping address associated with the order.</description>
        <label>Shipping Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__StateISOCode__c</fullName>
        <description>For US and Canadian addresses this is the two letter ISO code for the state.</description>
        <label>State ISO Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__State__c</fullName>
        <description>For non-US or non-Canadian addresses this is the name of the state for the address.</description>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CC Contact Address</label>
    <listViews>
        <fullName>ccrz__All</fullName>
        <columns>NAME</columns>
        <columns>ccrz__FirstName__c</columns>
        <columns>ccrz__LastName__c</columns>
        <columns>ccrz__AddressFirstline__c</columns>
        <columns>ccrz__AddressSecondline__c</columns>
        <columns>ccrz__City__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ccrz__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Contact Auto Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Contact Addresss</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>